--- a/19.06.23/style.css
+++ b/19.06.23/style.css
@@ -1,29 +1,38 @@
 div.box1 {
-    width: 300px;
-    height: 100px;
+    width: 33%;
+    height: 200px;
+    border: 1px solid black;
     background-color: blue;
-    position: relative;						
-    left: 25px;				
+    position: absolute;						
+    left: 25px;	
+    z-index: 1;			
 }
 div.box2 {
-    width: 200px;
+    width: 33%;
     height: 200px;
+    border: 1px solid black;
     background-color: red;
-    position: relative;						
-    left: 50px;				
+    position: absolute;
+    top: 150px;						
+    left: 150px;
+    z-index: 2;			
 }
 div.box3 {
-    width: 400px;
-    height: 100px;
+    width: 80%;
+    height: 200px;
+    border: 1px solid black;
     background-color: yellow;
-    position: absolute;						
-    top: 25px;				
+    position: absolute;
+    left: 50px;						
+    top: 300px;
+    z-index: 3;			
 }
 div.box4 {
-    width: 100px;
+    width: 20%;
     height: 400px;
+    border: 1px solid black;
     background-color: green;
-    position: static;						
-    left: 25px;
-    right:0			
+    position: absolute;						
+    right:0;
+    z-index: 4;		
 }
